--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,10 @@ dependencies:
     sdk: flutter
   
   circular_countdown_timer: ^0.2.0
+  percent_indicator: "^2.1.7+2"
 
+  path_provider: ^2.0.2
+  
     
 
   # The following adds the Cupertino Icons font to your application.
